--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
 	"name": "fastrange",
-	"version": "1.3.0",
+	"version": "1.4.0",
 	"description": "Create an array of numbers within a given range.",
 	"license": "MIT",
-	"main": "range.common.js",
 	"module": "range.js",
+	"main": "range.common.js",
 	"types": "range.d.ts",
 	"sideEffects": false,
 	"scripts": {
-		"test": "node node_modules/.bin/jest",
+		"build": "npx babel range.js -o range.common.js",
+		"test": "npx jest",
 		"moduletest": "webpack && node moduletest/range.module-out.js"
 	},
 	"keywords": [
@@ -32,8 +33,11 @@
 		"url": "https://github.com/edwinm/range.git"
 	},
 	"devDependencies": {
+		"babel-cli": "^6.26.0",
+		"babel-plugin-transform-es2015-modules-simple-commonjs": "^0.3.0",
 		"jest": "^24.1.0",
 		"webpack": "^4.19.0",
 		"webpack-cli": "^3.1.0"
-	}
+	},
+	"dependencies": {}
 }
