--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	"scripts": {
 		"build": "npx babel range.js -o range.common.js",
 		"test": "npx jest",
-		"moduletest": "webpack && node moduletest/range.module-out.js"
+		"moduletest": "webpack && node moduletest/range.module-out.js",
+		"coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls"
 	},
 	"keywords": [
 		"range",
@@ -35,6 +36,7 @@
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
 		"babel-plugin-transform-es2015-modules-simple-commonjs": "^0.3.0",
+		"coveralls": "^3.0.3",
 		"jest": "^24.1.0",
 		"webpack": "^4.19.0",
 		"webpack-cli": "^3.1.0"
